fixing identifier and firebase

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xsh-1g-75i">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xsh-1g-75i">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -160,7 +160,7 @@
                     <navigationItem key="navigationItem" title="Journal" largeTitleDisplayMode="always" id="xvl-4b-qxb">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="7Yt-V2-Zie">
                             <connections>
-                                <segue destination="Hmb-fC-6ES" kind="presentation" modalPresentationStyle="fullScreen" id="F1g-iq-lS8"/>
+                                <segue destination="Hmb-fC-6ES" kind="presentation" identifier="showModally" modalPresentationStyle="fullScreen" id="F1g-iq-lS8"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
