--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="EntryCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="h2b-br-gnv" detailTextLabel="01S-EH-uHi" style="IBUITableViewCellStyleValue1" id="KeT-BW-K8I" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="EntryCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" textLabel="h2b-br-gnv" detailTextLabel="01S-EH-uHi" style="IBUITableViewCellStyleValue1" id="KeT-BW-K8I" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KeT-BW-K8I" id="gPs-SL-C8a">
@@ -75,6 +75,7 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eED-FZ-JFC">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
                                     <navigationItem title="journal entry" id="RUE-Ji-8QH">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="P38-hM-T4T">
@@ -93,22 +94,30 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="Zjb-t7-eFB">
                                 <rect key="frame" x="8" y="118" width="398" height="427"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vKc-EC-OYm">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vKc-EC-OYm">
                                         <rect key="frame" x="0.0" y="0.0" width="398" height="115"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="write here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XGb-Vb-zXI">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XGb-Vb-zXI">
                                         <rect key="frame" x="0.0" y="141" width="398" height="286"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textView>
                                 </subviews>
                             </stackView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="68g-zK-klQ">
+                                <rect key="frame" x="8" y="569" width="398" height="32"/>
+                                <segments>
+                                    <segment title="😀"/>
+                                    <segment title="😞"/>
+                                    <segment title="😐" enabled="NO"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" red="0.29431280554296074" green="0.33431872213734493" blue="0.78610602732237223" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="eED-FZ-JFC" firstAttribute="centerX" secondItem="Zjb-t7-eFB" secondAttribute="centerX" id="4Bu-oN-7s0"/>
@@ -116,7 +125,10 @@
                             <constraint firstItem="Zjb-t7-eFB" firstAttribute="leading" secondItem="uqY-y8-zzm" secondAttribute="leading" constant="8" id="E6H-g2-Jh3"/>
                             <constraint firstItem="eED-FZ-JFC" firstAttribute="top" secondItem="uqY-y8-zzm" secondAttribute="top" id="GKr-Pg-f4i"/>
                             <constraint firstItem="uqY-y8-zzm" firstAttribute="bottom" secondItem="Zjb-t7-eFB" secondAttribute="bottom" constant="317" id="HIC-Lw-xZV"/>
+                            <constraint firstItem="uqY-y8-zzm" firstAttribute="trailing" secondItem="68g-zK-klQ" secondAttribute="trailing" constant="8" id="Ouy-QH-gdD"/>
                             <constraint firstItem="Zjb-t7-eFB" firstAttribute="top" secondItem="eED-FZ-JFC" secondAttribute="bottom" constant="30" id="ezI-xD-BzF"/>
+                            <constraint firstItem="68g-zK-klQ" firstAttribute="top" secondItem="Zjb-t7-eFB" secondAttribute="bottom" constant="24" id="jDo-Bn-aRD"/>
+                            <constraint firstItem="68g-zK-klQ" firstAttribute="leading" secondItem="uqY-y8-zzm" secondAttribute="leading" constant="8" id="jUT-6X-Eg0"/>
                             <constraint firstItem="uqY-y8-zzm" firstAttribute="trailing" secondItem="Zjb-t7-eFB" secondAttribute="trailing" constant="8" id="wdb-xc-Ya6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uqY-y8-zzm"/>
@@ -124,6 +136,7 @@
                     <connections>
                         <outlet property="entryTextField" destination="vKc-EC-OYm" id="W3t-Ny-5BZ"/>
                         <outlet property="entryTextView" destination="XGb-Vb-zXI" id="O8m-0o-KKF"/>
+                        <outlet property="moodControl" destination="68g-zK-klQ" id="Z53-Hw-gnA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="31D-uZ-muw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
